# python-cli-todo-app

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: app-testing-validator.md  error-handler.md  main-overseer.md  todo-app-architect.md  todo-manager.md
.claude/skills/: main-overseer.skill  todo-app-architect.skill  todo-manager.skill
.specify/memory/: constitution.md
history/prompts/001-todo-console-app/: 0001-implement-intermediate-and-advanced-todo-features.green.prompt.md  0002-implement-interactive-menu-system.green.prompt.md  0003-remove-interactive-sort-selection.green.prompt.md  0004-remove-automatic-recurring-task-creation.green.prompt.md  0006-fix-date-prioritization.green.prompt.md  0007-handle-already-completed-tasks-gracefully.green.prompt.md  0008-sort-tasks-by-id-ascending.green.prompt.md
history/prompts/constitution/: 001-create-project-constitution.constitution.prompt.md
history/prompts/general/: 001-fix-tag-search-bug.general.prompt.md  002-project-status-report.general.prompt.md
history/prompts/todo-console-app/: 001-create-todo-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-create-implementation-tasks.tasks.prompt.md  004-implement-todo-app.implement.prompt.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/contracts/: cli-commands.md
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_memory.py  test_task.py  test_task_service.py
todo_apps/: __init__.py  exceptions.py  main.py
todo_apps/cli/: __init__.py  commands.py  menu.py  parser.py
todo_apps/models/: __init__.py  task.py
todo_apps/services/: __init__.py  memory.py  task_service.py
todo_apps/utils/: __init__.py  date_parser.py
(+1 files in other folders)
